# rir-generator

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-gpu.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  python-package.yml
docs/: conf.py  index.rst  module.rst  references.rst  refs.bib
docs/guides/: CI_CD_SETUP.md  MAINTAINER_GUIDE.md  MIGRATION.md  VERSIONING.md
examples/: compare_gpu.py
rir_generator/: __init__.py
rir_generator/_rir/: build.py
src/rir_generator/: __init__.py  gpu.py
src/rir_generator/_cffi/: build.py
tests/: test_example.py  test_gpu.py
